# src/main/java/com/mktplace/api/ProductApiDelegate.java
@@ -1,9 +1,8 @@
 package com.mktplace.api;
 
 import com.mktplace.model.Product;
-import com.mktplace.model.User;
-import com.mktplace.model.UserCreationRequest;
-import com.mktplace.model.UserCreationResponse;
+import com.mktplace.model.ProductCreationRequest;
+import com.mktplace.model.ProductCreationResponse;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -20,49 +19,47 @@ import java.util.Optional;
 import jakarta.annotation.Generated;
 
 /**
- * A delegate to be called by the {@link UserApiController}}.
+ * A delegate to be called by the {@link ProductApiController}}.
  * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
  */
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
-public interface UserApiDelegate {
+public interface ProductApiDelegate {
 
     default Optional<NativeWebRequest> getRequest() {
         return Optional.empty();
     }
 
     /**
-     * POST /users : Create a new user
+     * POST /products : Create a new product
      *
-     * @param userCreationRequest  (required)
-     * @return User created successfully (status code 200)
+     * @param productCreationRequest  (required)
+     * @return Product created successfully (status code 200)
      *         or Internal server error (status code 500)
-     * @see UserApi#createUser
+     * @see ProductApi#createProduct
      */
-    default Mono<ResponseEntity<UserCreationResponse>> createUser(Mono<UserCreationRequest> userCreationRequest,
+    default Mono<ResponseEntity<ProductCreationResponse>> createProduct(Mono<ProductCreationRequest> productCreationRequest,
         ServerWebExchange exchange) {
         Mono<Void> result = Mono.empty();
         exchange.getResponse().setStatusCode(HttpStatus.NOT_IMPLEMENTED);
         for (MediaType mediaType : exchange.getRequest().getHeaders().getAccept()) {
             if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                String exampleString = "{ \"user\" : { \"createdAt\" : 0, \"password\" : \"password\", \"id\" : \"\", \"email\" : \"email\", \"username\" : \"username\", \"updatedAt\" : 6 }, \"status\" : \"success\" }";
+                String exampleString = "{ \"user\" : { \"createdAt\" : 5, \"user_id\" : \"user_id\", \"product_id\" : 0, \"name\" : \"name\", \"base_price\" : 6.027456183070403, \"description\" : \"description\", \"quantity_available\" : 1, \"updatedAt\" : 5 }, \"status\" : \"success\" }";
                 result = ApiUtil.getExampleResponse(exchange, mediaType, exampleString);
                 break;
             }
         }
-        return result.then(userCreationRequest).then(Mono.empty());
+        return result.then(productCreationRequest).then(Mono.empty());
 
     }
 
     /**
-     * GET /users/{userId}/products : Get all products listed by a user
+     * GET /products : Get all products
      *
-     * @param userId ID of the user to retrieve product listings for (required)
-     * @return Product details (status code 200)
+     * @return A list of items (status code 200)
      *         or Internal server error (status code 500)
-     * @see UserApi#getAllProductsListedByUser
+     * @see ProductApi#getAllProducts
      */
-    default Mono<ResponseEntity<Flux<Product>>> getAllProductsListedByUser(String userId,
-        ServerWebExchange exchange) {
+    default Mono<ResponseEntity<Flux<Product>>> getAllProducts(ServerWebExchange exchange) {
         Mono<Void> result = Mono.empty();
         exchange.getResponse().setStatusCode(HttpStatus.NOT_IMPLEMENTED);
         for (MediaType mediaType : exchange.getRequest().getHeaders().getAccept()) {
@@ -77,21 +74,21 @@ public interface UserApiDelegate {
     }
 
     /**
-     * GET /users/{userId} : Get user details by Id
+     * GET /products/{productId} : Get a product by Id
      *
-     * @param userId ID of the user to retrieve (required)
-     * @return User details (status code 200)
-     *         or User not found (status code 404)
+     * @param productId ID of the product to retrieve (required)
+     * @return product details (status code 200)
+     *         or Product not found (status code 404)
      *         or Internal server error (status code 500)
-     * @see UserApi#getUserById
+     * @see ProductApi#getProductById
      */
-    default Mono<ResponseEntity<User>> getUserById(String userId,
+    default Mono<ResponseEntity<Product>> getProductById(Long productId,
         ServerWebExchange exchange) {
         Mono<Void> result = Mono.empty();
         exchange.getResponse().setStatusCode(HttpStatus.NOT_IMPLEMENTED);
         for (MediaType mediaType : exchange.getRequest().getHeaders().getAccept()) {
             if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                String exampleString = "{ \"createdAt\" : 0, \"password\" : \"password\", \"id\" : \"\", \"email\" : \"email\", \"username\" : \"username\", \"updatedAt\" : 6 }";
+                String exampleString = "{ \"createdAt\" : 5, \"user_id\" : \"user_id\", \"product_id\" : 0, \"name\" : \"name\", \"base_price\" : 6.027456183070403, \"description\" : \"description\", \"quantity_available\" : 1, \"updatedAt\" : 5 }";
                 result = ApiUtil.getExampleResponse(exchange, mediaType, exampleString);
                 break;
             }
