# src/main/java/com/mktplace/model/Item.java
@@ -1,228 +1,0 @@
-package com.mktplace.model;
-
-import java.net.URI;
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import org.openapitools.jackson.nullable.JsonNullable;
-import java.time.OffsetDateTime;
-import jakarta.validation.Valid;
-import jakarta.validation.constraints.*;
-import org.hibernate.validator.constraints.*;
-import io.swagger.v3.oas.annotations.media.Schema;
-
-
-import java.util.*;
-import jakarta.annotation.Generated;
-
-/**
- * Item
- */
-
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
-public class Item {
-
-  private Long id;
-
-  private String name;
-
-  private Double price;
-
-  private Integer quantity;
-
-  private Long sellerId;
-
-  private Long createdAt;
-
-  private Long updatedAt;
-
-  public Item id(Long id) {
-    this.id = id;
-    return this;
-  }
-
-  /**
-   * Get id
-   * @return id
-  */
-  
-  @Schema(name = "id", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("id")
-  public Long getId() {
-    return id;
-  }
-
-  public void setId(Long id) {
-    this.id = id;
-  }
-
-  public Item name(String name) {
-    this.name = name;
-    return this;
-  }
-
-  /**
-   * Get name
-   * @return name
-  */
-  
-  @Schema(name = "name", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("name")
-  public String getName() {
-    return name;
-  }
-
-  public void setName(String name) {
-    this.name = name;
-  }
-
-  public Item price(Double price) {
-    this.price = price;
-    return this;
-  }
-
-  /**
-   * Get price
-   * @return price
-  */
-  
-  @Schema(name = "price", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("price")
-  public Double getPrice() {
-    return price;
-  }
-
-  public void setPrice(Double price) {
-    this.price = price;
-  }
-
-  public Item quantity(Integer quantity) {
-    this.quantity = quantity;
-    return this;
-  }
-
-  /**
-   * Get quantity
-   * @return quantity
-  */
-  
-  @Schema(name = "quantity", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("quantity")
-  public Integer getQuantity() {
-    return quantity;
-  }
-
-  public void setQuantity(Integer quantity) {
-    this.quantity = quantity;
-  }
-
-  public Item sellerId(Long sellerId) {
-    this.sellerId = sellerId;
-    return this;
-  }
-
-  /**
-   * Get sellerId
-   * @return sellerId
-  */
-  
-  @Schema(name = "sellerId", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("sellerId")
-  public Long getSellerId() {
-    return sellerId;
-  }
-
-  public void setSellerId(Long sellerId) {
-    this.sellerId = sellerId;
-  }
-
-  public Item createdAt(Long createdAt) {
-    this.createdAt = createdAt;
-    return this;
-  }
-
-  /**
-   * Get createdAt
-   * @return createdAt
-  */
-  
-  @Schema(name = "createdAt", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("createdAt")
-  public Long getCreatedAt() {
-    return createdAt;
-  }
-
-  public void setCreatedAt(Long createdAt) {
-    this.createdAt = createdAt;
-  }
-
-  public Item updatedAt(Long updatedAt) {
-    this.updatedAt = updatedAt;
-    return this;
-  }
-
-  /**
-   * Get updatedAt
-   * @return updatedAt
-  */
-  
-  @Schema(name = "updatedAt", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("updatedAt")
-  public Long getUpdatedAt() {
-    return updatedAt;
-  }
-
-  public void setUpdatedAt(Long updatedAt) {
-    this.updatedAt = updatedAt;
-  }
-
-  @Override
-  public boolean equals(Object o) {
-    if (this == o) {
-      return true;
-    }
-    if (o == null || getClass() != o.getClass()) {
-      return false;
-    }
-    Item item = (Item) o;
-    return Objects.equals(this.id, item.id) &&
-        Objects.equals(this.name, item.name) &&
-        Objects.equals(this.price, item.price) &&
-        Objects.equals(this.quantity, item.quantity) &&
-        Objects.equals(this.sellerId, item.sellerId) &&
-        Objects.equals(this.createdAt, item.createdAt) &&
-        Objects.equals(this.updatedAt, item.updatedAt);
-  }
-
-  @Override
-  public int hashCode() {
-    return Objects.hash(id, name, price, quantity, sellerId, createdAt, updatedAt);
-  }
-
-  @Override
-  public String toString() {
-    StringBuilder sb = new StringBuilder();
-    sb.append("class Item {\n");
-    sb.append("    id: ").append(toIndentedString(id)).append("\n");
-    sb.append("    name: ").append(toIndentedString(name)).append("\n");
-    sb.append("    price: ").append(toIndentedString(price)).append("\n");
-    sb.append("    quantity: ").append(toIndentedString(quantity)).append("\n");
-    sb.append("    sellerId: ").append(toIndentedString(sellerId)).append("\n");
-    sb.append("    createdAt: ").append(toIndentedString(createdAt)).append("\n");
-    sb.append("    updatedAt: ").append(toIndentedString(updatedAt)).append("\n");
-    sb.append("}");
-    return sb.toString();
-  }
-
-  /**
-   * Convert the given object to string with each line indented by 4 spaces
-   * (except the first line).
-   */
-  private String toIndentedString(Object o) {
-    if (o == null) {
-      return "null";
-    }
-    return o.toString().replace("\n", "\n    ");
-  }
-}
-
